--- a/clanok.tex
+++ b/clanok.tex
@@ -2,7 +2,7 @@
 
 \documentclass[10pt,twoside,slovak,a4paper]{article}
 
-\usepackage[slovak]{babel}
+\usepackage[english]{babel}
 %\usepackage[T1]{fontenc}
 \usepackage[IL2]{fontenc} % lepšia sadzba písmena Ľ než v T1
 \usepackage[utf8]{inputenc}
@@ -15,15 +15,15 @@
 
 \pagestyle{headings}
 
-\title{Názov\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2015/16, vedenie: Meno Priezvisko}} % meno a priezvisko vyučujúceho na cvičeniach
+\title{Steering behaviours of autonomous agents for realistic display in 2 dimensions and the use in games\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2022/23, vedenie: Mirwais Ahmadzai}} 
 
-\author{Meno Priezvisko\\[2pt]
+\author{Richard Čerňanský\\[2pt]
 	{\small Slovenská technická univerzita v Bratislave}\\
 	{\small Fakulta informatiky a informačných technológií}\\
-	{\small \texttt{...@stuba.sk}}
+	{\small \texttt{xcernansky@stuba.sk}}
 	}
 
-\date{\small 30. september 2015} % upravte
+\date{\small October 18 2022 } 
 
 
 
@@ -32,19 +32,14 @@
 \maketitle
 
 \begin{abstract}
-\ldots
+
 \end{abstract}
 
 
 
-\section{Úvod}
+\section{Introduction}
+\quad  Autonomous character or autonomous agent is an arbitrary entity of biological, mechanical or software origin, which is able to make decisions based on assigned instructions and consecutive stimulus from the environment . In this article I want to focus on problematic of steering behaviors of autonomous characters in software and its display methods. The importance of this topic hides in usability in animation, film effects and mainly in games. If we want the user to have the best realistic experience from movement of the objects possible, we have to obey specific rules and think about how they behave in certain occasions. 
 
-Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
-
-Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
-Základný problém, ktorý bol naznačený v úvode, je podrobnejšie vysvetlený v časti~\ref{nejaka}.
-Dôležité súvislosti sú uvedené v častiach~\ref{dolezita} a~\ref{dolezitejsia}.
-Záverečné poznámky prináša časť~\ref{zaver}.
 
 
 
