--- a/clanok.tex
+++ b/clanok.tex
@@ -43,7 +43,7 @@
 
 
 
-\section{Nejaká časť} \label{nejaka}
+\section{Nejaká časť ahoj} \label{nejaka}
 
 Z obr.~\ref{f:rozhod} je všetko jasné. 
 
