--- a/predbezne_odovzdanie/clanok.tex
+++ b/predbezne_odovzdanie/clanok.tex
@@ -16,7 +16,7 @@
 
 \pagestyle{headings}
 
-\title{Application of vector algebra and physics in designing steering behaviour of autonomous agents for realistic display in 2 dimensions\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2022/23, vedenie: Mirwais Ahmadzai}} 
+\title{Application of vector algebra and physics in designing steering behaviours of autonomous agents for realistic display in 2 dimensions\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2022/23, vedenie: Mirwais Ahmadzai}} 
 
 \author{Richard Čerňanský\\[2pt]
 	{\small Slovenská technická univerzita v Bratislave}\\
@@ -34,7 +34,7 @@
 
 \begin{abstract}
 
-In this article we will focus on the problematic of steering behaviours of autonomous agents in software and display methods. The importance of this topic hides in usability in animation, film effects and mainly in games. If we want the user to have the best realistic experience from movement of the objects possible, we have to obey specific rules of physics that will be explained. Applying the knowledge, we will then see methods how to simulate a seek and arrival steering behavior. As a tool we will use a p5.js library of JavaScript.
+In this article we will focus on the problematic of steering behaviours of autonomous agents in software and display methods. The importance of this topic hides in usability in animation, film effects and mainly in games. If we want the user to have the best realistic experience from movement of the objects possible, we have to obey specific rules of physics that will be explained. Applying the knowledge, we will then see methods how to simulate a seek and arrival steering behavior. As a tool we will use a p5.js library of JavaScript language.
 
 \end{abstract}
 
@@ -95,11 +95,29 @@ Simple Vehicle Model: \{mass- scalar; position- vector; velocity-	vector; maxFor
 
 \subsubsection{Seek} \label{seek}
 
+
+
 Seeking steers a character towards a specified position in a space. This behavior aligns the vector of a velocity towards the target. But how do we calculate the steering force if we do not want the vehicle to steer completely right after seeing the target? We can diagram our problem from 3.2.
+
+
+\includegraphics[scale=0.25]{diagram_car.png} 	\includegraphics[scale=0.25]{diagram_steeringForce.png}
 
 \subsubsection{Arrive} \label{arrive}
 
 When we want to simulate arrival, we must think about gradually decreasing the speed of the vehicle and eventually stop it.
+
+\includegraphics[scale=0.25]{diagram_radius.png}
+
+From the diagram we can assume two things: 
+
+\begin{center}
+
+$d>r 	\Rightarrow speed = maxSpeed$ \par
+
+$d \leq r \Rightarrow speed = (d/r)  . maxSpeed$
+
+\end{center}		
+
 
 \section{Simulating the behavior in p5.js} \label{simulation} 
 
@@ -117,12 +135,11 @@ p5.js is a JavaScript library for creative coding, with a focus on making coding
 
 \section{Conclusion} \label{coclusion} 
 
+\textbf{Acknowledgement} \par
 \acknowledgement{I would like to thank my friend Lukáš Častven for introducing the problem to me and arousing my interest in the topic\ldots}
 
 
-% týmto sa generuje zoznam literatúry z obsahu súboru literatura.bib podľa toho, na čo sa v článku odkazujete
 \bibliography{literatura}
-\bibliographystyle{plain} % prípadne alpha, abbrv alebo hociktorý iný
-
+\bibliographystyle{plain} 
 
 \end{document}
