--- a/predbezne_odovzdanie/clanok_novy.tex
+++ b/predbezne_odovzdanie/clanok_novy.tex
@@ -54,7 +54,7 @@ The autonomous agents generally refer to an entity that chooses how to act in it
 
 \item An autonomous agent processes the information from its environment and calculates an action. The action is represented as a force that influences the object. For example, a police officer sees a thief and is attracted to him. The attraction is represented by a force pointing towards his location. 
 
-\item An autonomous agent should have no leader. This is not something that defines every autonomous agent. Sometimes you need to state some global rules that it must follow, but mostly you want the object to decide on its own, calculate its own actions.
+\item An autonomous agent should have no leader. This is not something that defines every autonomous agent. Sometimes you need to state some global rules that it must follow, but mostly you want the object to decide on its own\footnote{however, the designer can include some specific atributes if needed}, calculate its own actions.
 
 \end{enumerate}
 
@@ -72,7 +72,6 @@ Containing more than two autonomous agents.
 \end{itemize}
 
 In this article we will focus on the first mentioned. 
-
 
 \section{Problem statement} \label{problem}
 
