--- a/predbezne_odovzdanie_121032/clanok_121032.tex
+++ b/predbezne_odovzdanie_121032/clanok_121032.tex
@@ -35,6 +35,8 @@
 
 In this article we will focus on the problematic of steering behaviors of autonomous agents in software and display methods. The importance of this topic hides in usability in animation, film effects and mainly in games. If we want the user to have the best realistic experience from movement of the objects possible, we have to obey specific rules of physics that will be explained. Applying the knowledge, we will then see methods how to simulate a seek and arrival steering behavior. As a tool we will use a p5.js library of JavaScript language.
 
+In this article we will focus on the problematic of steering behaviors of software-based autonomus agents in animation in games. As we want the player to have the best realistic experience from the movement of the objects possible, we need to design their beahavior according to the physics that describes it. I will explain my ideas on how to count the steering force in seek and arrive steering behavior and show the implementation in algorythm
+
 \end{abstract}
 
 \section{Introduction}
