--- a/predbezne_odovzdanie_121032/literatura.bib
+++ b/predbezne_odovzdanie_121032/literatura.bib
@@ -21,3 +21,10 @@
   year={2000},
   school={Stockholm Universitet}
 }
+
+@book{Cooper,
+	author = "Jonathan Cooper",
+	title = "Game Anim: Video Game Animation Explained",
+	publisher = "A K Peters/CRC Press",
+	year = 2019
+}
